# CleanRobot_STU

./: .gitignore  AGENTS.md  IMG_5861.heic  README.md  robot.urdf  tai_lieu_SLAM.txt  tai_lieu_harness_engineering.txt  ultralytics_example.py  yolo_training.ipynb
clean_robot_ws/: frames_2026-06-24_14.23.48.gv  install_2_run.sh
clean_robot_ws/install/: local_setup.sh  setup.sh
clean_robot_ws/install/clean_robot_simulation/share/clean_robot_simulation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
clean_robot_ws/install/clean_robot_simulation/share/clean_robot_simulation/worlds/: my_world_with_sensors.wbt  my_world_with_sensors_fixed.wbt
clean_robot_ws/log/: latest_build
clean_robot_ws/src/: slam_parmas.yaml
clean_robot_ws/src/clean_robot_description/: CMakeLists.txt  package.xml
clean_robot_ws/src/clean_robot_description/config/: controllers.yaml
clean_robot_ws/src/clean_robot_description/launch/: display.launch.py
clean_robot_ws/src/clean_robot_description/urdf/: base.urdf.xacro  clean_robot.urdf.xacro  sensors.urdf.xacro  wheels.urdf.xacro
clean_robot_ws/src/clean_robot_mission/: package.xml  setup.cfg  setup.py
clean_robot_ws/src/clean_robot_mission/clean_robot_mission/: mission_manager_node.py  nav2_client.py  search_behavior.py  state_machine.py  target_manager_node.py  target_store.py
clean_robot_ws/src/clean_robot_mission/launch/: mission.launch.py
clean_robot_ws/src/clean_robot_msgs/: CMakeLists.txt  package.xml
clean_robot_ws/src/clean_robot_msgs/msg/: TrashCandidate.msg  TrashCandidateArray.msg  TrashDetection2D.msg  TrashDetection2DArray.msg
clean_robot_ws/src/clean_robot_navigation/: CMakeLists.txt  package.xml
clean_robot_ws/src/clean_robot_navigation/config/: nav2_params.yaml  slam_params.yaml
clean_robot_ws/src/clean_robot_navigation/launch/: mapping.launch.py  nav2.launch.py  rviz.launch.py  slam.launch.py  trash_static_flow.launch.py
clean_robot_ws/src/clean_robot_navigation/maps/: .gitkeep  my_map.pgm  my_map.yaml
clean_robot_ws/src/clean_robot_navigation/rviz/: slam.rviz
clean_robot_ws/src/clean_robot_navigation/scripts/: scan_normalizer_node.py
clean_robot_ws/src/clean_robot_perception/: fake_trash_candidate_node.py  package.xml  setup.cfg  setup.py
clean_robot_ws/src/clean_robot_perception/clean_robot_perception/: camera_dataset_capture_node.py  fake_trash_candidate_node.py  image_utils.py  trash_detector_node.py  trash_localization_node.py  trash_marker_node.py  trash_tracker_node.py  yolo_model.py
clean_robot_ws/src/clean_robot_perception/launch/: perception.launch.py
clean_robot_ws/src/clean_robot_simulation/: package.xml  setup.cfg  setup.py
clean_robot_ws/src/clean_robot_simulation/clean_robot_simulation/: clean_robot_simulation.py  my_robot_driver.py
clean_robot_ws/src/clean_robot_simulation/config/: ros2_control.yaml
clean_robot_ws/src/clean_robot_simulation/launch/: robot_launch.py  webots_control.launch.py
clean_robot_ws/src/clean_robot_simulation/resource/: my_robot.urdf
clean_robot_ws/src/clean_robot_simulation/worlds/: my_world.wbt
dataset/: classes.txt  data.yaml
dataset/labels/: clean_robot_20260627_190910_079_000024.txt  clean_robot_20260627_190912_078_000025.txt  clean_robot_20260627_190914_079_000026.txt  clean_robot_20260627_190916_078_000027.txt  clean_robot_20260627_190918_079_000028.txt  clean_robot_20260627_190922_079_000030.txt  clean_robot_20260627_190924_079_000031.txt  clean_robot_20260627_190926_079_000032.txt  clean_robot_20260627_190928_079_000033.txt  clean_robot_20260627_190936_079_000037.txt  clean_robot_20260627_190938_079_000038.txt  clean_robot_20260627_190942_079_000040.txt  clean_robot_20260627_190944_078_000041.txt  clean_robot_20260627_190946_078_000042.txt  clean_robot_20260627_190954_079_000046.txt  clean_robot_20260627_190956_078_000047.txt
docs/: TAI_LIEU_DU_AN_CLEAN_ROBOT.md
docs/venv_for_in_wb/: tmpl0bd3p7h_world_with_URDF_robot.wbt
src/clean_robot_description/launch/: display.launch.py
src/clean_robot_msgs/: CMakeLists.txt  package.xml
src/clean_robot_msgs/msg/: TrashCandidate.msg  TrashDetection2D.msg
src/clean_robot_navigation/: CMakeLists.txt
src/clean_robot_navigation/launch/: nav2.launch.py
