<?xml version="1.0"?>
<package format="3">

  <name>clean_robot_mission</name>
  <version>0.0.1</version>

  <description>Mission manager for clean robot</description>

  <maintainer email="user@example.com">user</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>clean_robot_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>